--- a/desktop/src/main/java/ru/rsreu/gorkin/codeanalyzer/desktop/forms/UnitGUIForm.form
+++ b/desktop/src/main/java/ru/rsreu/gorkin/codeanalyzer/desktop/forms/UnitGUIForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ru.rsreu.gorkin.codeanalyzer.desktop.forms.SourceFileForm">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ru.rsreu.gorkin.codeanalyzer.desktop.forms.UnitGUIForm">
   <grid id="27dc6" binding="parentPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -10,7 +10,7 @@
       <splitpane id="626ea">
         <constraints border-constraint="Center"/>
         <properties>
-          <dividerLocation value="500"/>
+          <dividerLocation value="360"/>
           <doubleBuffered value="true"/>
         </properties>
         <border type="none"/>
@@ -139,7 +139,7 @@
                               <component id="49bb3" class="javax.swing.JTextArea" binding="unitTextArea">
                                 <constraints/>
                                 <properties>
-                                  <font name="Courier New" size="10" style="0"/>
+                                  <font name="Courier New" size="12" style="0"/>
                                 </properties>
                               </component>
                             </children>
