added test classes

--- a/desktop/src/main/java/ru/rsreu/gorkin/codeanalyzer/desktop/ui/forms/UnitGUIForm.form
+++ b/desktop/src/main/java/ru/rsreu/gorkin/codeanalyzer/desktop/ui/forms/UnitGUIForm.form
@@ -66,9 +66,11 @@
                 <children>
                   <component id="ebc1e" class="javax.swing.JLabel" binding="unitLabel">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <enabled value="false"/>
+                      <font style="1"/>
                       <text value="Label"/>
                     </properties>
                   </component>
