add changes to forms

--- a/desktop/src/main/java/ru/rsreu/gorkin/codeanalyzer/desktop/ui/forms/UnitGUIForm.form
+++ b/desktop/src/main/java/ru/rsreu/gorkin/codeanalyzer/desktop/ui/forms/UnitGUIForm.form
@@ -118,7 +118,9 @@
                                 <children>
                                   <component id="a99be" class="javax.swing.JTable" binding="metricsTable">
                                     <constraints/>
-                                    <properties/>
+                                    <properties>
+                                      <font size="14" style="1"/>
+                                    </properties>
                                   </component>
                                 </children>
                               </scrollpane>
