--- a/desktop/src/main/java/ru/rsreu/gorkin/codeanalyzer/desktop/ui/forms/ProjectForm.form
+++ b/desktop/src/main/java/ru/rsreu/gorkin/codeanalyzer/desktop/ui/forms/ProjectForm.form
@@ -25,14 +25,16 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <font size="18" style="1"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="45789" class="javax.swing.JTable" binding="projectMetricsTable">
             <constraints/>
             <properties>
               <background color="-1"/>
-              <font name="Dubai" size="12" style="1"/>
+              <font name="Dubai" size="14" style="1"/>
             </properties>
           </component>
         </children>
